@@ -123,32 +123,38 @@ namespace MingwCommon
                 return;
             }
 
+            C.Compiler compilerInstance = C.CompilerFactory.GetTargetInstance(target, C.ClassNames.CCompilerTool);
+            string switchPrefix = compilerInstance.IncludePathCompilerSwitches[0];
+
             Opus.Core.ReferenceTypeOption<Opus.Core.DirectoryCollection> includePathsOption = option as Opus.Core.ReferenceTypeOption<Opus.Core.DirectoryCollection>;
             foreach (string includePath in includePathsOption.Value)
             {
                 if (includePath.Contains(" "))
                 {
-                    commandLineBuilder.Add(System.String.Format("-isystem\"{0}\"", includePath));
+                    commandLineBuilder.Add(System.String.Format("{0}\"{1}\"", switchPrefix, includePath));
                 }
                 else
                 {
-                    commandLineBuilder.Add(System.String.Format("-isystem{0}", includePath));
+                    commandLineBuilder.Add(System.String.Format("{0{{1}", switchPrefix, includePath));
                 }
             }
         }
 
         private static void IncludePathsCommandLine(object sender, Opus.Core.StringArray commandLineBuilder, Opus.Core.Option option, Opus.Core.Target target)
         {
+            C.Compiler compilerInstance = C.CompilerFactory.GetTargetInstance(target, C.ClassNames.CCompilerTool);
+            string switchPrefix = compilerInstance.IncludePathCompilerSwitches[1];
+
             Opus.Core.ReferenceTypeOption<Opus.Core.DirectoryCollection> includePathsOption = option as Opus.Core.ReferenceTypeOption<Opus.Core.DirectoryCollection>;
             foreach (string includePath in includePathsOption.Value)
             {
                 if (includePath.Contains(" "))
                 {
-                    commandLineBuilder.Add(System.String.Format("-I\"{0}\"", includePath));
+                    commandLineBuilder.Add(System.String.Format("{0}\"{1}\"", switchPrefix, includePath));
                 }
                 else
                 {
-                    commandLineBuilder.Add(System.String.Format("-I{0}", includePath));
+                    commandLineBuilder.Add(System.String.Format("{0}{1}", switchPrefix, includePath));
                 }
             }
         }
