@@ -15,5 +15,13 @@ namespace MingwCommon
         }
 
         public abstract Opus.Core.StringArray EnvironmentPaths(Opus.Core.Target target);
+
+        public override Opus.Core.StringArray IncludePathCompilerSwitches
+        {
+            get
+            {
+                return new Opus.Core.StringArray("-isystem", "-I");
+            }
+        }
     }
 }
